# docker-statistics-collector

./: .gitignore  Cargo.toml  Dockerfile  MCP.md  README.md
.github/workflows/: release-docker-statistics-api.yaml  release-docker-statistics-collector.yaml  release-docker-statistics-ui-api.yaml  release-docker-statistics-ui.yaml  release.yml
docker-sdk/: Cargo.toml  test.json
docker-sdk/src/: container_inspect.rs  container_stats.rs  container_top.rs  exec.rs  lib.rs  list_of_containers.rs  main.rs  sdk.rs
docker-statistics-api/: Cargo.toml  Dockerfile  README.md
docker-statistics-api/src/: auth.rs  main.rs  settings_reader.rs
docker-statistics-api/src/app/: app_ctx.rs  data_cache.rs  ssh_private_key_resolver.rs
docker-statistics-api/src/background/: update_metrics_cache_timer.rs
docker-statistics-api/src/http/: mod.rs  start_up.rs
docker-statistics-api/src/http/controllers/: builder.rs  mod.rs
docker-statistics-api/src/http/controllers/envs/: get_envs_action.rs
docker-statistics-api/src/http/controllers/exec_permission/: disable_action.rs  enable_action.rs  get_status_action.rs  mod.rs
docker-statistics-api/src/http/controllers/logs/: get_logs_action.rs  mod.rs
docker-statistics-api/src/http/controllers/metrics/: get_vm_cpu_and_mem_action.rs
docker-statistics-api/src/http/controllers/processes/: get_processes_action.rs  mod.rs
docker-statistics-api/src/http/controllers/ssh/: apply_pass_phrase_action.rs  mod.rs
docker-statistics-api/src/http_client/: exec_permission.rs  get_processes.rs  mod.rs
docker-statistics-api/src/models/: http_responses.rs  mod.rs  models.rs  vm_model.rs
docker-statistics-api/src/ws/: exec_ws_callback.rs  logs_ws_callback.rs  mod.rs
docker-statistics-collector/: Cargo.toml  MCP_INSTRUCTION.md  MCP_PROMPT_HOW_TO_USE_IT.md  dockerfile
docker-statistics-collector/src/: host_disks.rs  host_mem.rs  main.rs  peers_client.rs  proc_fd.rs  settings.rs
docker-statistics-collector/src/app/: app_ctx.rs  exec_permission.rs  metrics_cache.rs  mod.rs  peers_cache.rs  services_cache.rs
docker-statistics-collector/src/http/: build_controllers.rs  mod.rs  start_up.rs
docker-statistics-collector/src/http/controllers/: mod.rs
docker-statistics-collector/src/http/controllers/containers_controller/: contracts.rs  exec_action.rs  get_action.rs  get_local_action.rs  get_logs.rs  get_processes.rs  get_running_action.rs  mod.rs  route_logs.rs
docker-statistics-collector/src/http/controllers/exec_permission_controller/: contracts.rs  disable_action.rs  enable_action.rs  get_status_action.rs  mod.rs
docker-statistics-collector/src/http/controllers/metrics_controller/: get_list_of_services_action.rs  get_metrics_action.rs  get_service_metrics_action.rs  mod.rs
docker-statistics-collector/src/mcp/: exec_in_container_tool_call.rs  find_application_tool_call.rs  find_containers_tool_call.rs  get_compose_yaml_tool_call.rs  get_container_logs_tool_call.rs  get_host_info_tool_call.rs  how_to_use_it_prompt.rs  list_exposed_ports_tool_call.rs  list_servers_and_services_tool_call.rs  middleware.rs  mod.rs  server.rs
docker-statistics-collector/src/timers/: mod.rs  sync_containers_info_timer.rs  sync_metrics_endpoints_timer.rs  sync_peers_timer.rs
docker-statistics-collector/src/ws/: exec_ws_callback.rs  log_frame_parser.rs  logs_ws_callback.rs  mod.rs
docker-statistics-ui/: Cargo.toml  Dioxus.toml  Dockerfile  README.md
docker-statistics-ui-api/: Cargo.toml  Dockerfile  README.md
docker-statistics-ui-api/src/: selected_vm.rs  settings_reader.rs
docker-statistics-ui-api/src/app/: data_cache.rs
docker-statistics-ui-api/src/background/: update_metrics_cache_timer.rs
docker-statistics-ui/design/: app.jsx  charts.jsx  data.js  detail.jsx  icons.jsx  index.html  panels.jsx  styles.css
docker-statistics-ui/public/assets/: dockerscope.css
docker-statistics-ui/src/: main.rs  router.rs  selected_vm.rs  utils.rs
docker-statistics-ui/src/api/: base.rs  envs.rs  exec_permission.rs  logs.rs  mod.rs  processes.rs  ssh_pass_key.rs  vm_metrics.rs
docker-statistics-ui/src/models/: models.rs  request_error.rs  vm_model.rs
docker-statistics-ui/src/server/: settings.rs
docker-statistics-ui/src/server/app/: app_ctx.rs  data_cache.rs  data_cache_by_env.rs
docker-statistics-ui/src/server/background/: update_metrics_cache_timer.rs
docker-statistics-ui/src/server/http_client/: get_processes.rs
docker-statistics-ui/src/states/: dialog_state.rs  env_list_state.rs  main_state.rs  mod.rs  prefs.rs
docker-statistics-ui/src/views/: containers_list.rs  left_panel.rs  mod.rs  prompt_ssh_pass_key.rs  render_files_graph.rs
docker-statistics-ui/src/views/dialog/: mod.rs  render.rs  show_exec.rs  show_logs.rs  show_processes.rs
docker-statistics-ui/src/views/dockerscope/: container_list.rs  helpers.rs  icons.rs  mod.rs  topbar.rs  vm_rail.rs
docker-statistics-ui/src/views/dockerscope/charts/: area.rs  mod.rs  sparkline.rs
docker-statistics-ui/src/views/dockerscope/detail/: compose.rs  exec_permission.rs  hero.rs  labels.rs  log_preview.rs  mod.rs  mounts.rs  panel.rs  ports.rs  statline.rs
docker-statistics-ui/static/index/: 676ec607.html
(+3 files in other folders)
