[package]
name = "docker-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurl = { tag = "0.5.2", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "support-unix-socket",
] }


tokio = { version = "*", features = ["full"] }
tokio-util = "*"
serde = "*"
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde_json = "*"
