[package]
name = "docker-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "unix-socket",
] }


tokio = { version = "*", features = ["full"] }
tokio-util = "*"
serde = "*"
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "hex",
] }
serde_json = "*"
