[package]
name = "docker-statistics-api"
version = "0.1.0"
edition = "2021"

[dependencies]
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "with-ssh",
] }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }
my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }
my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
futures = "*"
chrono = "*"
base64 = "*"
lazy_static = "*"
