[package]
name = "docker-statistics-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

my-http-server = { tag = "0.7.1", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "controllers",
    "macros",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }
flurl = { tag = "0.5.2", git = "https://github.com/MyJetTools/fl-url.git" }

my-settings-reader = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
docker-sdk = { path = "../docker-sdk" }
async-trait = "*"
serde_yaml = "*"
