[package]
name = "docker-statistics-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "controllers",
    "macros",
] }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
docker-sdk = { path = "../docker-sdk" }
async-trait = "*"
serde_yaml = "*"

rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
schemars = "0.8"
http = "1"
http-body-util = "0.1"
bytes = "1"
