[package]
name = "docker-statistics-ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-utils = { tag = "0.7.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "web",
] }
reqwest = { version = "*", features = ["json"] }
reqwasm = "*"
futures = "*"
web-sys = { version = "*", features = [
    "Window",
    "MediaQueryList",
    "Location",
    "History",
    "UrlSearchParams",
] }
wasm-bindgen = "*"
js-sys = "*"

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
base64 = "*"
flate2 = "1"
ansi-to-html = "*"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
